<resources>
    <string name="version">1.35</string>
    <string name="vk_app_id">5201452</string>
    <string name="vk_access_token">pmPVYNFX8GM9HXi0rPoX</string>
    <string name="fingerprint_secret_code">F00F221D64AE9D3C6BF9425751AC5B70C4DE7299</string>
    <string-array name="menu_array">
        <item>@string/menu_refresh</item>
        <item>@string/menu_add_booking</item>
        <item>@string/menu_all_bookings</item>
        <item>@string/menu_recipes</item>
        <item>@string/menu_components</item>
        <item>@string/menu_booking_men</item>
        <item>@string/menu_tools</item>
    </string-array>
    <string name="app_name">Пирожок и Вишенка</string>
    <string name="action_settings">Settings</string>
    <string name="save">сохранить</string>
    <string name="add">добавить</string>
    <string name="btnStatistic">статистика</string>
    <string name="btnBookings">заказы</string>
    <string name="btnEvents">события</string>
    <string name="btnBookingMen">заказчики</string>
    <string name="btnBookingTypes">типы заказов</string>
    <string name="btnComponents">ингредиенты</string>
    <string name="btnRecipes">рецепты</string>
    <string name="menu_refresh">обновить</string>
    <string name="menu_recalc">пересчитать себестоимость</string>
    <string name="menu_add_booking">новый заказ</string>
    <string name="menu_all_bookings">заказы</string>
    <string name="menu_recipes">рецепты</string>
    <string name="menu_components">ингредиенты</string>
    <string name="menu_booking_men">заказчики</string>
    <string name="menu_tools">настройки</string>
    <string name="btnSaveText">записать</string>
    <string name="btnCancelText">отмена</string>
    <string name="btnRound">округлить</string>
    <string name="btnDropDB">удалить базу данных</string>
    <string name="btnRunTests">запустить тесты</string>
    <string name="btnAdd">добавить</string>
    <string name="btnCakes">торты</string>
    <string name="btnAddCake">добавить торт</string>
    <string name="btnAddCakeType">добавить тип торта</string>
    <string name="btnAddComponent">добавить ингредиент</string>
    <string name="btnRecalc">пересчитать заказы</string>
    <string name="btnSaveComponent">сохранить ингредиент</string>
    <string name="btnAddComponentType">добавить вид ингредиента</string>
    <string name="btnEditComponent">сохранить ингредиент</string>
    <string name="btnOpenRecipes">рецепты</string>
    <string name="btnAddRecipe">добавить рецепт</string>
    <string name="btnSaveRecipe">сохранить рецепт</string>
    <string name="btnAddRecipeMan">добавить заказчика</string>
    <string name="btnAddBookingMan">добавить заказчика</string>
    <string name="btnAddNewBookingMan">добавить нового</string>
    <string name="btnBooking">заказы</string>
    <string name="btnAddBooking">новый заказ</string>
    <string name="btnNewBooking">новый заказ</string>
    <string name="btnAddSelected">добавить</string>
    <string name="btnSaveBooking">сохранить заказ</string>
    <string name="btnOpenAllBookingsLayout">все заказы</string>
    <string name="btnAddBookingToEvent">добавить заказ</string>
    <string name="btnAddBookingType">добавить тип заказа</string>
    <string name="btnAddNewEvent">новое событие</string>
    <string name="btnAddEvent">добавить событие</string>
    <string name="btnSaveEvent">сохранить событие</string>
    <string name="cbCountable">штучный</string>
    <string name="tvDate">дата</string>
    <string name="tvTime">время</string>
    <string name="tvType">тип заказа</string>
    <string name="tvBookingMan">заказчик</string>
    <string name="tvRecipe">рецепт</string>
    <string name="tvEvent">событие</string>
    <string name="tvWeight">сколько</string>
    <string name="tvRecipePrice">себестоимость</string>
    <string name="tvCakePrice">стоимость</string>
    <string name="tvProceeds">выручка:</string>
    <string name="tvComment">комментарий</string>
    <string name="tvDiscount">скидка</string>
    <string name="tvTimeSpent">трудозатраты</string>
    <string name="tvCountProduct">сколько</string>
    <string name="tvFirstname">имя</string>
    <string name="tvPhone">телефон</string>
    <string name="tvProfile">профиль</string>
    <string name="tvCountBookings">количество заказов</string>
    <string name="tvSumBookings">общая сумма заказов</string>
    <string name="tvName">наименование</string>
    <string name="tvFirstName">имя</string>
    <string name="tvWeightGramm">вес (грамм)</string>
    <string name="tvPrice">цена</string>
    <string name="tvWhat">что</string>
    <string name="tvWhere">где</string>
    <string name="tvWhen">когда</string>
    <string name="tvBookings">заказы</string>
    <string name="tvSumRecipePrice">суммарная себестоимость</string>
    <string name="tvSumCakePrice">итоговая стоимость</string>
    <string name="tvChooseFromList">выбрать из списка</string>
    <string name="tvComponents">ингредиенты</string>
    <string name="tvComponent">ингредиент</string>
    <string name="tvBookingMen">заказчики</string>
    <string name="tvCalendarLeft">←</string>
    <string name="tvCalendarRight">→</string>
    <string name="tvBookingType">типы заказов</string>
    <string name="tvCurrentBookings">текущие заказы</string>
    <string name="tvBookingArchive">архив заказов</string>
    <string name="tvNextEvents">предстоящие события</string>
    <string name="tvAmount">выручка:</string>
    <string name="tvIncome">доход</string>
    <string name="tvCosts">издержки</string>
    <string name="tvCountBookingMen">количество заказчиков</string>
    <string name="tvCreated">произведено:</string>
    <string name="tvCupcakes">капкейков</string>
    <string name="tvCakepops">кейкпопсов</string>
    <string name="tvCookies">печенья</string>
    <string name="tvPastry">пирожных</string>
    <string name="tvSpiceCake">пряников</string>
    <string name="tvСakes">тортов</string>
    <string name="tvMarriages">ярусов</string>
    <string name="tvResultPrice">к оплате:</string>
    <string name="roubleString">руб.</string>
    <string name="rouble">i</string>
    <string name="roubleArial">a</string>
    <string name="roubleArialItalic">b</string>
    <string name="roubleArialBold">c</string>
    <string name="roubleArialBoldItalic">d</string>
    <string name="roubleGeorgia">e</string>
    <string name="roubleGeorgiaItalic">f</string>
    <string name="roubleGeorgiaBold">g</string>
    <string name="roubleGeorgiaBoldItalic">h</string>
    <string name="roubleTahoma">i</string>
    <string name="roubleTahomaBold">j</string>
    <string name="roubleTimes">k</string>
    <string name="roubleTimesItalic">l</string>
    <string name="roubleTimesBold">m</string>
    <string name="roubleTimesBoldItalic">n</string>
    <string name="roubleLucida">o</string>
    <string name="roubleLucidaBold">p</string>
    <string name="roubleVerdana">q</string>
    <string name="roubleVerdanaItalic">r</string>
    <string name="roubleVerdanaBold">s</string>
    <string name="roubleVerdanaBoldItalic">t</string>
    <string name="roubleFutura">u</string>
    <string name="roubleTrumpMediaeval">v</string>
    <string name="roubleITCStudioScript">w</string>
    <string name="title_activity_table_records">TableRecords</string>
    <string name="rubleSymbolJava">\u20BD</string>
    <string name="rubleSymbolHTML">&#8381;</string>
    <string name="rubleSymbolHTMLHex">&#x20bd;</string>
</resources>