<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    >
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <yummycherrypie.pl.custom_controls.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvChooseFromList"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text_color"
            />
        <ListView android:id="@+id/listViewBookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >
        </ListView>
    </FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <yummycherrypie.pl.custom_controls.CustomFontButton
            android:id="@+id/buttonAddNewBooking"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/btnNewBooking"
            android:textColor="@color/text_color"
            android:background="@color/button_background"
            android:layout_marginRight="2dp"/>
        <yummycherrypie.pl.custom_controls.CustomFontButton
            android:id="@+id/buttonAddSelectedBooking"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/btnAddSelected"
            android:textColor="@color/text_color"
            android:background="@color/button_background"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>


</LinearLayout>