<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <yummycherrypie.pl.custom_controls.CustomFontTextView
                android:id="@+id/textViewBookingType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvName"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <yummycherrypie.pl.custom_controls.CustomFontEditText
                android:id="@+id/editTextBookingTypeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/EditTextGreenTheme"
                >
                <requestFocus />
            </yummycherrypie.pl.custom_controls.CustomFontEditText>
        </FrameLayout>
        <CheckBox
            android:id="@+id/checkBoxCountable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbCountable"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivAddBookintTypeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon">
        </ImageView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <yummycherrypie.pl.custom_controls.CustomFontButton
            android:id="@+id/buttonSaveBookingType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/button_background"/>

    </FrameLayout>


</LinearLayout>