<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <yummycherrypie.pl.custom_controls.CustomFontTextView
            android:id="@+id/textViewBookingMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFirstname"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
             />
        <yummycherrypie.pl.custom_controls.CustomFontEditText
            android:id="@+id/editTextBookingManName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/EditTextGreenTheme">
            <requestFocus />
        </yummycherrypie.pl.custom_controls.CustomFontEditText>
    </FrameLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <yummycherrypie.pl.custom_controls.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPhone"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text_color"
             />
        <yummycherrypie.pl.custom_controls.CustomFontEditText
            android:id="@+id/editTextBookingManPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|phone"
            android:layout_marginTop="15dp"
            android:maxLength="10"
            style="@style/EditTextGreenTheme"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <yummycherrypie.pl.custom_controls.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvProfile"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text_color"
            />
        <yummycherrypie.pl.custom_controls.CustomFontEditText
            android:id="@+id/editTextBookingManVK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|phone"
            android:layout_marginTop="15dp"
            android:maxLength="10"
            style="@style/EditTextGreenTheme"/>
    </FrameLayout>
</LinearLayout>